==> Gioiee3/Extensometer-LoRa/Firmware/Node/Extenso_SX1278_Final_No_Response/Core/Src/sx1278.c <==
#include <stdio.h>
#include <stdint.h>
#include <string.h>
#include <stdlib.h>
#include <math.h>
#include <stdbool.h>
#include <time.h>
#include "main.h"
#include "spi.h"
#include "gpio.h"
#include "sx1278.h"
#include "common.h"

uint8_t sx1278_read_reg(uint8_t reg)
{
	uint8_t txByte = reg & 0x7f;
	uint8_t rxByte = 0x00;
    HAL_GPIO_WritePin(LoRa_CS_PORT, LoRa_CS_PIN, GPIO_PIN_RESET);
	HAL_SPI_Transmit(HSPI, &txByte, 1, 1000);
	while (HAL_SPI_GetState(HSPI) != HAL_SPI_STATE_READY);
	HAL_SPI_Receive(HSPI, &rxByte, 1, 1000);
	while (HAL_SPI_GetState(HSPI) != HAL_SPI_STATE_READY);
    HAL_GPIO_WritePin(LoRa_CS_PORT, LoRa_CS_PIN, GPIO_PIN_SET);
    return rxByte;
}

void sx1278_write_reg(uint8_t reg, uint8_t val)
{
	uint8_t ureg = reg | 0x80;
	HAL_GPIO_WritePin(LoRa_CS_PORT, LoRa_CS_PIN, GPIO_PIN_RESET);
	HAL_SPI_Transmit(HSPI, &ureg, 1, 1000);
	while (HAL_SPI_GetState(HSPI) != HAL_SPI_STATE_READY);
	HAL_SPI_Transmit(HSPI, &val, 1, 1000);
	while (HAL_SPI_GetState(HSPI) != HAL_SPI_STATE_READY);
	HAL_GPIO_WritePin(LoRa_CS_PORT, LoRa_CS_PIN, GPIO_PIN_SET);
}

void sx1278_reset(void)
{
	HAL_GPIO_WritePin(LoRa_RST_PORT, LoRa_RST_PIN, GPIO_PIN_RESET);
    HAL_Delay(50);
    HAL_GPIO_WritePin(LoRa_RST_PORT, LoRa_RST_PIN, GPIO_PIN_SET);
    HAL_Delay(50);
    HAL_GPIO_WritePin(LoRa_CS_PORT, LoRa_CS_PIN, GPIO_PIN_SET);
}

void sx1278_send_data(uint8_t *data_send, int size)
{
    sx1278_standby();
    sx1278_write_reg(REG_FIFO_ADDR_PTR, 0);
    sx1278_write_reg(REG_PAYLOAD_LENGTH, 0);
    for (int index = 0; index < size; index++)
    {
        sx1278_write_reg(REG_FIFO, data_send[index]);
    }
    sx1278_write_reg(REG_PAYLOAD_LENGTH, size);
    HAL_GPIO_WritePin(LoRa_RXEN_PORT, LoRa_RXEN_PIN, GPIO_PIN_RESET);
    HAL_GPIO_WritePin(LoRa_TXEN_PORT, LoRa_TXEN_PIN, GPIO_PIN_SET);
    HAL_Delay(1);
    // Start transmission and wait for conclusion
    sx1278_tx();
    while (!(sx1278_read_reg(REG_IRQ_FLAGS) & IRQ_TX_DONE_MASK))
    {
        HAL_Delay(10);
    }
    int irq = sx1278_read_reg(REG_IRQ_FLAGS);
    sx1278_write_reg(REG_IRQ_FLAGS, irq);
    
    sx1278_sleep();
    //sx1278_standby();
}

void sx1278_start_recv_data(void)
{
    sx1278_standby();
	sx1278_set_irq(0x00);
    HAL_GPIO_WritePin(LoRa_TXEN_PORT, LoRa_TXEN_PIN, GPIO_PIN_RESET);
    HAL_GPIO_WritePin(LoRa_RXEN_PORT, LoRa_RXEN_PIN, GPIO_PIN_SET);
	sx1278_write_reg(REG_IRQ_FLAGS, sx1278_read_reg(REG_IRQ_FLAGS));
    sx1278_rx_contiuous();
    // sx1278_rx_single();
}
